# MyCraft

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SPRITE_GENERATION_GUIDE.md  SPRITE_SETUP_GUIDE.md  TEXTURE_GUIDE.md  cmake_install.cmake  generate_sprites.py  test_opengl  test_opengl.cpp  test_render  test_render.cpp  test_simple  test_simple.cpp  texture_atlas_debug.ppm
assets/textures/: air.ppm  coal_ore.ppm  diamond_ore.ppm  dirt.ppm  grass.ppm  iron_ore.ppm  leaves.ppm  sand.ppm  stone.ppm  water.ppm  wood.ppm
include/: Block.h  Chunk.h  ImageLoader.h  Inventory.h  Renderer.h  Vector3.h  World.h  ui.h
src/: Chunk.cpp  ImageLoader.cpp  Inventory.cpp  Renderer.cpp  Renderer.cpp.backup  Renderer.cpp.backup2  Renderer.cpp.backup_final  Renderer.cpp.camera_fix  Renderer.cpp.fixed_chunk_pos  World.cpp  World.cpp.backup  World.cpp.backup_debug  World.cpp.debug  main.cpp
